# BAMBOO

./: .gitignore  README.md  pyproject.toml  requirements.txt
bamboo/: __init__.py  accessor.py  cache.py  client.py  core.py  models.py
examples/: Sentiment Analysis Resume.ipynb  Sentiment Analysis.ipynb  Ticket Triage.ipynb  sentiment_demo.py  transcript_sentiment_demo.py
tests/: test_accessor_and_batch.py  test_cache.py  test_client.py  test_core.py  test_models.py
